# Azure_Korean_Doc_Framework

./: README.md  config.py  doc_chunk_main.py  doc_chunk_main_only_q.py  pyproject.toml  requirements.txt  run_guardrail_scenarios.py  run_quality_evaluation.py  test_edgequake_features.py  test_framework.py  test_framework_v4.py  test_scenarios_v47.py  test_v51_lightrag_features.py  test_v60_features.py  verify_index.py
azure_korean_doc_framework/: config.py
azure_korean_doc_framework/core/: agent.py  agentic_retrieval.py  error_recovery.py  graph_rag.py  hooks.py  llm_cache.py  multi_model_manager.py  reranker.py  schema.py  streaming.py  sub_agent.py  vector_store.py  web_tools.py
azure_korean_doc_framework/evaluation/: ragas_evaluator.py
azure_korean_doc_framework/generation/: __init__.py  evidence_extractor.py
azure_korean_doc_framework/guardrails/: __init__.py  faithfulness.py  hallucination.py  injection.py  numeric_verifier.py  pii.py  question_classifier.py  retrieval_gate.py
azure_korean_doc_framework/parsing/: chunker.py  entity_extractor.py  parser.py
azure_korean_doc_framework/utils/: azure_clients.py  logger.py  search_schema.py
core/: agent.py  multi_model_manager.py  vector_store.py
parsing/: chunker.py  parser.py
tests/: conftest.py  test_core_framework.py  test_lightrag_features.py  test_scenarios.py  test_v6_features.py
utils/: logger.py
